--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ p{
 }
 /* If we make a height for section. the background-image will show. */
 section{
-    height: 600px;
+    height: 500px;
     padding: 100px;         /* For Sections gap */
 }
 /* Link Button Design */ 
@@ -58,7 +58,7 @@ section{
 .single-experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 5px;
-    height: 80%;
+    height: 70%;
     background-color: white;
 }
 .experience-area{
@@ -68,7 +68,7 @@ section{
 }
 #full-stack{
     border-left: 7px solid;
-    border-image: linear-gradient(180deg, lightsalmon, tomato);             /* Colour change dark to light */
+    border-image: linear-gradient(180deg, lightsalmon, tomato);     /* Colour change dark to light */
     border-image-slice: 1;
 }
 #font-end{
@@ -77,6 +77,7 @@ section{
     border-image-slice: 1;
 }
 
+/* footer part */
 footer p{
     text-align: center;
 }
